--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid ">
         <div class="container">
             <div class="row py-5">
-                <div class="col-sm-3">
+                <div class="col-sm-3" id="form">
                     <input type="hidden" class="form-control border-0" id="id" placeholder="id">
                     <div class="form-floating mb-3">
                         
@@ -31,7 +31,7 @@
                         <input type="date" class="form-control border-0 bg-secondary text-white" id="filmDate" placeholder="date">
                         <label for="filmDate" class="text-white">Date</label>
                     </div>
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center mb-5">
                         <button type="button" class="btn btn-outline-dark me-1" id="clearAll">Clear All</button>
                         <button type="button" class="btn btn-light me-1" id="filmAdd">Add</button>
                         <button type="button" class="btn btn-light me-1 d-none" id="update">Update</button>
